--- a/app/src/main/res/layout/activity_login_activty.xml
+++ b/app/src/main/res/layout/activity_login_activty.xml
@@ -17,6 +17,7 @@
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content"
             android:layout_weight=".5"
+            android:clickable="false"
             android:orientation="vertical">
 
         <TextView
@@ -38,6 +39,8 @@
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content"
             android:layout_weight=".5"
+            android:clickable="true"
+            android:id="@+id/create_account"
             android:orientation="vertical">
 
             <TextView
@@ -97,6 +100,13 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <TextView
+            android:layout_width = "wrap_content"
+            android:layout_height = "wrap_content"
+            android:text="Forgot password ?"
+            android:clickable="true"
+            android:textColor="@color/colorPrimaryDark"/>
+
 
     </LinearLayout>
 
@@ -110,6 +120,7 @@
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content"
             android:elevation="10sp"
+            android:clickable="true"
             android:background="@drawable/button_selector"
             android:text="@string/signin"
             android:textColor="@color/colorWhite"
