--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".RegisterActivity">
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:layout_width = "match_parent"
+    android:layout_height = "match_parent"
+    android:layout_margin = "10sp"
+    android:orientation = "vertical"
+    tools:context = ".RegisterActivity">
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:orientation = "horizontal">
+
+        <LinearLayout
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:clickable="false"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:fontFamily = "@font/poppins_bold"
+                android:text = "@string/create_an_account"
+                android:textColor = "@color/colorblack"
+                android:textSize = "@dimen/dimens_18sp" />
+
+            <TextView
+                android:layout_width = "65sp"
+                android:layout_height = "3sp"
+                android:background = "@color/colorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width = "170sp"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:clickable="true"
+            android:gravity="end"
+            android:id="@+id/sign_in"
+            android:orientation="vertical"
+            android:focusable = "true">
+
+            <TextView
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:fontFamily = "@font/poppins_bold"
+                android:text = "@string/signin"
+                android:gravity="right"
+                android:textColor = "@color/colorgrey"
+                android:textSize = "@dimen/dimens_17sp" />
+
+            <TextView
+                android:layout_width = "45sp"
+                android:layout_height = "3sp"
+                android:layout_marginRight="@dimen/dimens_18sp"
+                android:background = "@color/colorgrey" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+
+        <LinearLayout
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:orientation = "vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:layout_marginTop = "10sp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width = "match_parent"
+                    android:layout_height = "wrap_content"
+                    android:hint = "@string/name" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:layout_marginTop = "10sp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width = "match_parent"
+                    android:layout_height = "wrap_content"
+                    android:hint = "@string/phone_number"
+                    android:inputType="numberDecimal"/>
+
+            </android.support.design.widget.TextInputLayout>
 
 
 
-</android.support.constraint.ConstraintLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width = "match_parent"
+                    android:layout_height = "wrap_content"
+                    android:hint = "@string/email"
+                    android:inputType="textEmailAddress"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:layout_marginTop = "10sp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width = "match_parent"
+                    android:layout_height = "wrap_content"
+                    android:hint = "@string/password"
+                    android:inputType="textPassword"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_marginTop="@dimen/dimens_20sp"
+            android:elevation="10sp">
+
+            <Button
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:elevation="10sp"
+                android:clickable="true"
+                android:background="@drawable/button_selector"
+                android:text="@string/register"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/dimens_17sp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
