--- a/app/src/main/res/layout/activity_leader_profile.xml
+++ b/app/src/main/res/layout/activity_leader_profile.xml
@@ -1,10 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".LeaderProfile">
 
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/appBar"
+        android:theme="@style/AppTheme.AppBarOverlay">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            app:title="Dashboard"
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@color/colorWhite"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:theme="@style/AppTheme.Toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_margin="5sp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width = "90sp"
+            android:layout_height = "90sp"
+            android:src="@drawable/user_profile"
+            />
+
+        <LinearLayout
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="10sp">
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Leader name"
+                android:textSize="@dimen/dimens_17sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Loksabha name"/>
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Vidhansabha name"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_marginTop="10sp">
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:layout_margin="2sp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="10sp">
+
+            <LinearLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:padding="10sp">
+
+
+            <ImageView
+                android:layout_width = "45sp"
+                android:layout_height = "45sp"
+                android:src="@drawable/ic_management"/>
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Booth management"
+                android:textAlignment="center"
+                android:textSize="@dimen/dimens_17sp"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:layout_margin="2sp"
+            android:padding="10sp">
+
+            <LinearLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:padding="10sp">
+
+
+                <ImageView
+                    android:layout_width = "45sp"
+                    android:layout_height = "45sp"
+                    android:src="@drawable/ic_person_managment"/>
+
+                <TextView
+                    android:layout_width = "wrap_content"
+                    android:layout_height = "wrap_content"
+                    android:text="Person management"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/dimens_17sp"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:layout_marginTop="10sp">
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:layout_margin="2sp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="10sp">
+
+            <LinearLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:padding="10sp">
+
+
+                <ImageView
+                    android:layout_width = "45sp"
+                    android:layout_height = "45sp"
+                    android:src="@drawable/ic_management"/>
+
+                <TextView
+                    android:layout_width = "wrap_content"
+                    android:layout_height = "wrap_content"
+                    android:text="Booth management"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/dimens_17sp"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_weight=".5"
+            android:layout_margin="2sp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:padding="10sp">
+
+            <LinearLayout
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:padding="10sp">
+
+
+                <ImageView
+                    android:layout_width = "45sp"
+                    android:layout_height = "45sp"
+                    android:src="@drawable/ic_person_managment"/>
+
+                <TextView
+                    android:layout_width = "wrap_content"
+                    android:layout_height = "wrap_content"
+                    android:text="Person management"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/dimens_17sp"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
