--- a/app/src/main/res/layout/activity_login_activty.xml
+++ b/app/src/main/res/layout/activity_login_activty.xml
@@ -83,6 +83,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width = "match_parent"
                 android:layout_height = "wrap_content"
+                android:id="@+id/login_email"
                 android:hint = "@string/email" />
 
         </android.support.design.widget.TextInputLayout>
@@ -96,6 +97,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width = "match_parent"
                 android:layout_height = "wrap_content"
+                android:id="@+id/login_pass"
                 android:hint = "@string/password" />
 
         </android.support.design.widget.TextInputLayout>
@@ -121,6 +123,7 @@
             android:layout_height = "wrap_content"
             android:elevation="10sp"
             android:clickable="true"
+            android:id="@+id/login"
             android:background="@drawable/button_selector"
             android:text="@string/signin"
             android:textColor="@color/colorWhite"
