--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,149 +8,232 @@
     android:orientation = "vertical"
     tools:context = ".RegisterActivity">
 
-    <LinearLayout
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:orientation = "horizontal">
 
-        <LinearLayout
-            android:layout_width = "match_parent"
-            android:layout_height = "wrap_content"
-            android:layout_weight=".5"
-            android:clickable="false"
-            android:orientation="vertical">
+    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <TextView
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:fontFamily = "@font/poppins_bold"
-                android:text = "@string/create_an_account"
-                android:textColor = "@color/colorblack"
-                android:textSize = "@dimen/dimens_18sp" />
-
-            <TextView
-                android:layout_width = "65sp"
-                android:layout_height = "3sp"
-                android:background = "@color/colorPrimary" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width = "170sp"
-            android:layout_height = "wrap_content"
-            android:layout_weight=".5"
-            android:clickable="true"
-            android:gravity="end"
-            android:id="@+id/sign_in"
-            android:orientation="vertical"
-            android:focusable = "true">
-
-            <TextView
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content"
-                android:fontFamily = "@font/poppins_bold"
-                android:text = "@string/signin"
-                android:gravity="right"
-                android:textColor = "@color/colorgrey"
-                android:textSize = "@dimen/dimens_17sp" />
-
-            <TextView
-                android:layout_width = "45sp"
-                android:layout_height = "3sp"
-                android:layout_marginRight="@dimen/dimens_18sp"
-                android:background = "@color/colorgrey" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width = "match_parent"
-        android:layout_height = "match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-
-
-        <LinearLayout
-            android:layout_width = "match_parent"
-            android:layout_height = "wrap_content"
-            android:orientation = "vertical">
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content"
-                android:layout_marginTop = "10sp">
-
-                <android.support.design.widget.TextInputEditText
+            <LinearLayout
                     android:layout_width = "match_parent"
                     android:layout_height = "wrap_content"
-                    android:hint = "@string/name" />
+                    android:orientation = "horizontal">
 
-            </android.support.design.widget.TextInputLayout>
+                <LinearLayout
+                        android:layout_width = "match_parent"
+                        android:layout_height = "wrap_content"
+                        android:layout_weight=".5"
+                        android:clickable="false"
+                        android:orientation="vertical">
+
+                    <TextView
+                            android:layout_width = "wrap_content"
+                            android:layout_height = "wrap_content"
+                            android:fontFamily = "@font/poppins_bold"
+                            android:text = "@string/create_an_account"
+                            android:textColor = "@color/colorblack"
+                            android:textSize = "@dimen/dimens_18sp" />
+
+                    <TextView
+                            android:layout_width = "65sp"
+                            android:layout_height = "3sp"
+                            android:background = "@color/colorPrimary" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                        android:layout_width = "170sp"
+                        android:layout_height = "wrap_content"
+                        android:layout_weight=".5"
+                        android:clickable="true"
+                        android:gravity="end"
+                        android:id="@+id/sign_in"
+                        android:orientation="vertical"
+                        android:focusable = "true">
+
+                    <TextView
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:fontFamily = "@font/poppins_bold"
+                            android:text = "@string/signin"
+                            android:gravity="right"
+                            android:textColor = "@color/colorgrey"
+                            android:textSize = "@dimen/dimens_17sp" />
 
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content"
-                android:layout_marginTop = "10sp">
+                    <TextView
+                            android:layout_width = "45sp"
+                            android:layout_height = "3sp"
+                            android:layout_marginRight="@dimen/dimens_18sp"
+                            android:background = "@color/colorgrey" />
 
-                <android.support.design.widget.TextInputEditText
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                     android:layout_width = "match_parent"
-                    android:layout_height = "wrap_content"
-                    android:hint = "@string/phone_number"
-                    android:inputType="numberDecimal"/>
-
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height = "match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
 
 
+                <LinearLayout
+                        android:layout_width = "match_parent"
+                        android:layout_height = "wrap_content"
+                        android:orientation = "vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content">
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:layout_marginTop = "10sp">
 
-                <android.support.design.widget.TextInputEditText
-                    android:layout_width = "match_parent"
-                    android:layout_height = "wrap_content"
-                    android:hint = "@string/email"
-                    android:inputType="textEmailAddress"/>
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:id="@+id/f_name"
+                                android:hint = "@string/f_name" />
 
-            </android.support.design.widget.TextInputLayout>
+                    </android.support.design.widget.TextInputLayout>
 
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:layout_marginTop = "10sp">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content"
-                android:layout_marginTop = "10sp">
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:id="@+id/l_name"
+                                android:hint = "@string/l_name" />
 
-                <android.support.design.widget.TextInputEditText
-                    android:layout_width = "match_parent"
-                    android:layout_height = "wrap_content"
-                    android:hint = "@string/password"
-                    android:inputType="textPassword"/>
-
-            </android.support.design.widget.TextInputLayout>
-
+                    </android.support.design.widget.TextInputLayout>
 
 
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:layout_marginTop = "10sp">
+
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:hint = "@string/phone_number"
+                                android:id="@+id/phone_no"
+                                android:inputType="numberDecimal"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:hint = "@string/dob"
+                                android:id="@+id/dob"
+                                android:inputType="date"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:hint = "@string/email"
+                                android:id="@+id/email"
+                                android:inputType="textEmailAddress"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <android.support.design.widget.TextInputLayout
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:layout_marginTop = "10sp">
+
+                        <android.support.design.widget.TextInputEditText
+                                android:layout_width = "match_parent"
+                                android:layout_height = "wrap_content"
+                                android:id="@+id/password"
+                                android:hint = "@string/password"
+                                android:inputType="textPassword"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="10sp">
+
+                        <Spinner
+                                android:id="@+id/state_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight=".5" />
+
+                        <Spinner
+                                android:id="@+id/loksabha_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight=".5" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="10sp">
+
+                        <Spinner
+                                android:id="@+id/vidhansabha_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight=".5" />
+
+                        <Spinner
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/party_spinner"
+                                android:layout_weight=".5"
+                                android:visibility="visible" />
+
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                        android:layout_width = "match_parent"
+                        android:layout_height = "wrap_content"
+                        android:layout_marginTop="@dimen/dimens_20sp"
+                        android:elevation="10sp">
+
+                    <Button
+                            android:layout_width = "match_parent"
+                            android:layout_height = "wrap_content"
+                            android:elevation="10sp"
+                            android:clickable="true"
+                            android:id="@+id/register"
+                            android:background="@drawable/button_selector"
+                            android:text="@string/register"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="@dimen/dimens_17sp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width = "match_parent"
-            android:layout_height = "wrap_content"
-            android:layout_marginTop="@dimen/dimens_20sp"
-            android:elevation="10sp">
+    </ScrollView>
 
-            <Button
-                android:layout_width = "match_parent"
-                android:layout_height = "wrap_content"
-                android:elevation="10sp"
-                android:clickable="true"
-                android:background="@drawable/button_selector"
-                android:text="@string/register"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/dimens_17sp"/>
 
-        </LinearLayout>
-
-    </LinearLayout>
 </LinearLayout>
