--- a/app/src/main/res/layout/activity_leader_profile.xml
+++ b/app/src/main/res/layout/activity_leader_profile.xml
@@ -36,12 +36,14 @@
             android:layout_width = "90sp"
             android:layout_height = "90sp"
             android:src="@drawable/user_profile"
+            android:id="@+id/leader_img"
             />
 
         <LinearLayout
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="@dimen/dimens_5sp"
             android:layout_marginLeft="10sp">
 
             <TextView
@@ -50,22 +52,114 @@
                 android:text="Leader name"
                 android:textSize="@dimen/dimens_17sp"
                 android:textStyle="bold"
+                android:fontFamily="@font/poppins_bold"
+                android:id="@+id/leader_name"
                 android:textColor="@color/colorPrimaryDark"/>
 
             <TextView
                 android:layout_width = "wrap_content"
                 android:layout_height = "wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:layout_marginTop="-7sp"
+                android:visibility="gone"
+                android:id="@+id/leader_loksabha"
                 android:text="Loksabha name"/>
 
             <TextView
                 android:layout_width = "wrap_content"
                 android:layout_height = "wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:layout_marginTop="-7sp"
+                android:id="@+id/leader_vidhansabha"
                 android:text="Vidhansabha name"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
+
+    <!-- ===================payment section============= -->
+
+
+
+    <LinearLayout
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:background="@drawable/paymnetcard_baclground"
+        android:layout_marginRight="30sp"
+        android:layout_marginLeft="30sp"
+        android:elevation="@dimen/dimens_10sp"
+        android:id="@+id/payment_layout"
+        android:padding="5sp"
+        >
+
+
+        <LinearLayout
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="@dimen/dimens_20sp"
+            android:layout_marginTop="@dimen/dimens_20sp"
+            android:elevation="@dimen/dimens_10sp"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Payment"
+                android:textSize="25sp"
+                android:drawableLeft="@drawable/ic_paymentmethod"
+                android:drawablePadding="@dimen/dimens_10sp"
+                android:paddingTop="@dimen/dimens_10sp"
+                android:textStyle="bold|italic"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/poppins_medium"/>
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Increased quality and more variances"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/poppins_medium"/>
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="@string/Rs"
+                android:textStyle="normal"
+                android:textSize="28sp"
+                android:paddingRight="@dimen/dimens_5sp"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/poppins_bold"/>
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="Standard"
+                android:textColorHighlight="@color/colorgrey"
+                android:layout_marginTop="-14sp"
+                android:layout_marginEnd="-20sp"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/poppins_medium"/>
+
+            <Button
+                android:layout_width = "match_parent"
+                android:layout_height = "50sp"
+                android:text="Pay"
+                android:background="@drawable/button_background"
+                android:padding="@dimen/dimens_10sp"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/dimens_20sp"
+                android:layout_margin="@dimen/dimens_10sp"
+                android:id="@+id/paynow"
+                android:layout_marginBottom="@dimen/dimens_8sp"
+                android:fontFamily="@font/poppins_medium"/>
+
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width = "match_parent"
@@ -216,6 +310,8 @@
                     android:layout_marginTop="5sp"
                     android:fontFamily="@font/poppins_medium"
                     android:textSize="@dimen/dimens_17sp"/>
+
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
