--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,21 @@
     <dimen name = "dimens_20sp">20sp</dimen>
     <dimen name = "dimens_17sp">17sp</dimen>
     <dimen name = "dimens_18sp">18sp</dimen>
+    <dimen name = "dimens_15sp">15sp</dimen>
+
+    <dimen name = "dimens_2sp">2sp</dimen>
+    <dimen name = "dimens_1sp">1sp</dimen>
+    <dimen name = "dimens_3sp">3sp</dimen>
+    <dimen name = "dimens_4sp">4sp</dimen>
+    <dimen name = "dimens_5sp">5sp</dimen>
+    <dimen name = "dimens_6sp">6sp</dimen>
+    <dimen name = "dimens_7sp">7sp</dimen>
+    <dimen name = "dimens_8sp">8sp</dimen>
+    <dimen name = "dimens_9sp">9sp</dimen>
+    <dimen name = "dimens_10sp">10sp</dimen>
+    <dimen name = "dimens_11sp">11sp</dimen>
+    <dimen name = "dimens_12sp">12sp</dimen>
+    <dimen name = "dimens_13sp">13sp</dimen>
+    <dimen name = "dimens_14sp">14sp</dimen>
+    <dimen name = "dimens_16sp">16sp</dimen>
 </resources>
